force-app/main/default/objects/Contact/fields/Accident_Place__c.field-meta.xml
<CustomField>
    <fullName>Accident_Place__c</fullName>
    <label>Accident Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>