force-app/main/default/objects/Contact/fields/ADVANCEPAYMENTBONDBondNo__c.field-meta.xml
<CustomField>
    <fullName>ADVANCEPAYMENTBONDBondNo__c</fullName>
    <description>ADVANCEPAYMENTBONDBondNo.</description>
    <label>ADVANCEPAYMENTBONDBondNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>