force-app/main/default/objects/Contact/fields/Agent_Profile_Address1__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Address1__c</fullName>
    <description>Agent_Profile_Address1</description>
    <label>Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>