force-app/main/default/objects/Contact/fields/Agent_Profile_Address2__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Address2__c</fullName>
    <label>Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>