force-app/main/default/objects/Contact/fields/Agent_Profile_Address3__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Address3__c</fullName>
    <label>Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>