force-app/main/default/objects/Contact/fields/Agent_Profile_No__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_No__c</fullName>
    <externalId>true</externalId>
    <label>Agent No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>