force-app/main/default/objects/Contact/fields/Agent_Profile_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Termination_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>