force-app/main/default/objects/Contact/fields/Agent_Role_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Role_Code__c</fullName>
    <label>Agent Role Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>FA Conventional</fullName>
            </value>
            <value>
                <fullName>FA Syariah</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>