force-app/main/default/objects/Contact/fields/Agent_Status__c.field-meta.xml
<CustomField>
    <fullName>Agent_Status__c</fullName>
    <label>Agent Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>