force-app/main/default/objects/Contact/fields/AirCargoExportFlightName__c.field-meta.xml
<CustomField>
    <fullName>AirCargoExportFlightName__c</fullName>
    <description>AirCargoExportFlightName.</description>
    <label>AirCargoExportFlightName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>