force-app/main/default/objects/Contact/fields/AirCargoImportFlightName__c.field-meta.xml
<CustomField>
    <fullName>AirCargoImportFlightName__c</fullName>
    <description>AirCargoImportFlightName.</description>
    <label>AirCargoImportFlightName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>