force-app/main/default/objects/Contact/fields/AirCargoInterinsulairFlightName__c.field-meta.xml
<CustomField>
    <fullName>AirCargoInterinsulairFlightName__c</fullName>
    <description>AirCargoInterinsulairFlightName.</description>
    <label>AirCargoInterinsulairFlightName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>