force-app/main/default/objects/Contact/fields/APE_TelUW__c.field-meta.xml
<CustomField>
    <fullName>APE_TelUW__c</fullName>
    <label>APE TelUW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>