force-app/main/default/objects/Contact/fields/AUTOMOBILELIABILITYRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>AUTOMOBILELIABILITYRiskLoc__c</fullName>
    <description>AUTOMOBILELIABILITYRiskLoc.</description>
    <label>AUTOMOBILELIABILITYRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>