force-app/main/default/objects/Contact/fields/AVIATIONHULLRegMarks__c.field-meta.xml
<CustomField>
    <fullName>AVIATIONHULLRegMarks__c</fullName>
    <description>AVIATIONHULLRegMarks.</description>
    <label>AVIATIONHULLRegMarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>