force-app/main/default/objects/Contact/fields/BIDBONDBondNo__c.field-meta.xml
<CustomField>
    <fullName>BIDBONDBondNo__c</fullName>
    <description>BIDBONDBondNo.</description>
    <label>BIDBONDBondNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>