force-app/main/default/objects/Contact/fields/BOILEREXPLOSIONINSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>BOILEREXPLOSIONINSRiskLoc__c</fullName>
    <description>BOILEREXPLOSIONINSURANCERiskLoc.</description>
    <label>BOILEREXPLOSIONINSURANCERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>