force-app/main/default/objects/Contact/fields/BOILEREXPLOSIONINSSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>BOILEREXPLOSIONINSSHARIARiskLoc__c</fullName>
    <description>BOILEREXPLOSIONINSURANCESHARIARiskLoc.</description>
    <label>BOILEREXPLOSIONINSURANCESHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>