force-app/main/default/objects/Contact/fields/BURGLARYINSNTHEFTSHARIALokasiResiko__c.field-meta.xml
<CustomField>
    <fullName>BURGLARYINSNTHEFTSHARIALokasiResiko__c</fullName>
    <description>BURGLARYINSURANCENTHEFTSHARIALokResiko.</description>
    <label>BURGLARYINSURANCENTHEFTSHARIALokResiko</label>
    <length>255</length>
    <type>Text</type>
</CustomField>