force-app/main/default/objects/Contact/fields/BusinessInterruptionRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>BusinessInterruptionRiskLoc__c</fullName>
    <description>BusinessInterruptionRiskLoc.</description>
    <label>BusinessInterruptionRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>