force-app/main/default/objects/Contact/fields/BusTouringChasisNo__c.field-meta.xml
<CustomField>
    <fullName>BusTouringChasisNo__c</fullName>
    <description>BusTouringChasisNo.</description>
    <label>BusTouringChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>