force-app/main/default/objects/Contact/fields/BusTouringMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>BusTouringMCHNENo__c</fullName>
    <description>BusTouringMachineNo.</description>
    <label>BusTouringMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>