force-app/main/default/objects/Contact/fields/Calc_FCR_Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Calc_FCR_Case_Date__c</fullName>
    <label>Calc FCR Case Date</label>
    <type>Date</type>
</CustomField>