force-app/main/default/objects/Contact/fields/CallLineRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CallLineRecordTypeID__c</fullName>
    <formula>IF(ISPICKVAL(Entity__c, &apos;ALI&apos;),&apos;0126F000001MIG9QAO&apos;, 
IF(ISPICKVAL(Entity__c, &apos;AFI&apos;),&apos;&apos;, 
IF(ISPICKVAL(Entity__c, &apos;AMFS&apos;),&apos;&apos;, 
IF(ISPICKVAL(Entity__c, &apos;MAGI&apos;),&apos;&apos;, 
&apos;&apos;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>only for Retention</inlineHelpText>
    <label>CallLineRecordTypeID</label>
    <type>Text</type>
</CustomField>