force-app/main/default/objects/Contact/fields/CallNote_RecordTypeId_Keeper__c.field-meta.xml
<CustomField>
    <fullName>CallNote_RecordTypeId_Keeper__c</fullName>
    <formula>IF(ISPICKVAL(Entity__c, &apos;ALI&apos;), &apos;0126F000001MIGMQA4&apos;, 
IF(ISPICKVAL($User.Entity__c, &apos;AFI&apos;), &apos;01290000000msmNAAQ&apos;, 
IF(ISPICKVAL($User.Entity__c, &apos;AMFS&apos;), &apos;01290000000mt76AAA&apos;, 
&apos;01290000000mt7BAAQ&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallNote RecordTypeId Keeper</label>
    <type>Text</type>
</CustomField>