force-app/main/default/objects/Contact/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>Type Campaign for Tel UW</description>
    <label>Campaign Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>