force-app/main/default/objects/Contact/fields/CARCNTRCTORALLRISKRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CARCNTRCTORALLRISKRiskLoc__c</fullName>
    <description>CARContCTORALLRISKRiskLoc.</description>
    <label>CARContCTORALLRISKRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>