force-app/main/default/objects/Contact/fields/Case_Count_Jul__c.field-meta.xml
<CustomField>
    <fullName>Case_Count_Jul__c</fullName>
    <label>Case Count Jul</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>