force-app/main/default/objects/Contact/fields/Case_Count_Nov__c.field-meta.xml
<CustomField>
    <fullName>Case_Count_Nov__c</fullName>
    <label>Case Count Nov</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>