force-app/main/default/objects/Contact/fields/Case_Count_Sep__c.field-meta.xml
<CustomField>
    <fullName>Case_Count_Sep__c</fullName>
    <label>Case Count Sep</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>