force-app/main/default/objects/Contact/fields/Case_Type_Agt__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Agt__c</fullName>
    <label>Case Type Agt</label>
    <type>TextArea</type>
</CustomField>