force-app/main/default/objects/Contact/fields/Case_Type_Apr__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Apr__c</fullName>
    <label>Case Type Apr</label>
    <type>TextArea</type>
</CustomField>