force-app/main/default/objects/Contact/fields/Case_Type_Des__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Des__c</fullName>
    <label>Case Type Des</label>
    <type>TextArea</type>
</CustomField>