force-app/main/default/objects/Contact/fields/Case_Type_Feb__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Feb__c</fullName>
    <label>Case Type Feb</label>
    <type>TextArea</type>
</CustomField>