force-app/main/default/objects/Contact/fields/Case_Type_Jan__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Jan__c</fullName>
    <label>Case Type Jan</label>
    <type>TextArea</type>
</CustomField>