force-app/main/default/objects/Contact/fields/Case_Type_Jul__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Jul__c</fullName>
    <label>Case Type Jul</label>
    <type>TextArea</type>
</CustomField>