force-app/main/default/objects/Contact/fields/Case_Type_Jun__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Jun__c</fullName>
    <label>Case Type Jun</label>
    <type>TextArea</type>
</CustomField>