force-app/main/default/objects/Contact/fields/Case_Type_Mar__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Mar__c</fullName>
    <label>Case Type Mar</label>
    <type>TextArea</type>
</CustomField>