force-app/main/default/objects/Contact/fields/Case_Type_Mei__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Mei__c</fullName>
    <label>Case Type Mei</label>
    <type>TextArea</type>
</CustomField>