force-app/main/default/objects/Contact/fields/Case_Type_Nov__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Nov__c</fullName>
    <label>Case Type Nov</label>
    <type>TextArea</type>
</CustomField>