force-app/main/default/objects/Contact/fields/Case_Type_Okt__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Okt__c</fullName>
    <label>Case Type Okt</label>
    <type>TextArea</type>
</CustomField>