force-app/main/default/objects/Contact/fields/Case_Type_Sep__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Sep__c</fullName>
    <label>Case Type Sep</label>
    <type>TextArea</type>
</CustomField>