force-app/main/default/objects/Contact/fields/CBGADVPAYMENTBONDCntrBankGUARANTNo__c.field-meta.xml
<CustomField>
    <fullName>CBGADVPAYMENTBONDCntrBankGUARANTNo__c</fullName>
    <description>CBGADV.PAYMENTBONDCounterBankGuaranteeNo.</description>
    <label>CBGADV.PAYMENTBONDCounterBankGuaranteeNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>