force-app/main/default/objects/Contact/fields/CBGBIDBONDCounterBankGUARANTNo__c.field-meta.xml
<CustomField>
    <fullName>CBGBIDBONDCounterBankGUARANTNo__c</fullName>
    <description>CBGBIDBONDCounterBankGuaranteeNo.</description>
    <label>CBGBIDBONDCounterBankGuaranteeNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>