force-app/main/default/objects/Contact/fields/CBGMAINTENANCEBONDCntrBankGUARANTNo__c.field-meta.xml
<CustomField>
    <fullName>CBGMAINTENANCEBONDCntrBankGUARANTNo__c</fullName>
    <description>CBGMAINTENANCEBONDCounterBankGuaranteeNo.</description>
    <label>CBGMAINTENANCEBONDCounterBankGuaranteeNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>