force-app/main/default/objects/Contact/fields/CBGPERFORMANCEBONDCntrBankGUARANTNo__c.field-meta.xml
<CustomField>
    <fullName>CBGPERFORMANCEBONDCntrBankGUARANTNo__c</fullName>
    <description>CBGPERFORMANCEBONDCounterBankGuaranteeNo.</description>
    <label>CBGPERFORMANCEBONDCounterBankGuaranteeNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>