force-app/main/default/objects/Contact/fields/Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>Certificate_No__c</fullName>
    <label>Certificate No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>