force-app/main/default/objects/Contact/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <label>Chassis No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>