force-app/main/default/objects/Contact/fields/Check_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Check_Contact_Name__c</fullName>
    <formula>Insured_Name__c ==  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Contact Name</label>
    <type>Checkbox</type>
</CustomField>