force-app/main/default/objects/Contact/fields/CIVILENGINCMPLETDRISKSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CIVILENGINCMPLETDRISKSRiskLoc__c</fullName>
    <description>CIVILENGINCOMPLETEDRISKSRiskLoc.</description>
    <label>CIVILENGINCOMPLETEDRISKSRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>