force-app/main/default/objects/Contact/fields/CIVILENGINCMPLETDRISKSSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CIVILENGINCMPLETDRISKSSHARIARiskLoc__c</fullName>
    <description>CIVILENGINCOMPLETEDRISKSSHARIARiskLoc.</description>
    <label>CIVILENGINCOMPLETEDRISKSSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>