force-app/main/default/objects/Contact/fields/Client_No__c.field-meta.xml
<CustomField>
    <fullName>Client_No__c</fullName>
    <label>Client No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>