force-app/main/default/objects/Contact/fields/CNTRCTORSPLANTNMCHNERYEngineNo__c.field-meta.xml
<CustomField>
    <fullName>CNTRCTORSPLANTNMCHNERYEngineNo__c</fullName>
    <description>ContCTORSPLANTNMACHINERYEngineNo.</description>
    <label>ContCTORSPLANTNMACHINERYEngineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>