force-app/main/default/objects/Contact/fields/CNTRCTORSPLANTNMCHNERYSerialNo__c.field-meta.xml
<CustomField>
    <fullName>CNTRCTORSPLANTNMCHNERYSerialNo__c</fullName>
    <description>ContCTORSPLANTNMACHINERYSerialNo.</description>
    <label>ContCTORSPLANTNMACHINERYSerialNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>