force-app/main/default/objects/Contact/fields/CNTRCTORSPLANTNMCHNERYSHARIAEngineNo__c.field-meta.xml
<CustomField>
    <fullName>CNTRCTORSPLANTNMCHNERYSHARIAEngineNo__c</fullName>
    <description>ContCTORSPLANTNMCHNERYSHARIAEngineNo.</description>
    <label>ContCTORSPLANTNMCHNERYSHARIAEngineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>