force-app/main/default/objects/Contact/fields/CNTRCTORSPLANTNMCHNERYSHARIASerNo__c.field-meta.xml
<CustomField>
    <fullName>CNTRCTORSPLANTNMCHNERYSHARIASerNo__c</fullName>
    <description>ContCTORSPLANTNMCHNERYSHARIASerialNo.</description>
    <label>ContCTORSPLANTNMCHNERYSHARIASerialNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>