force-app/main/default/objects/Contact/fields/COMBINEDLIABILITYINSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>COMBINEDLIABILITYINSRiskLoc__c</fullName>
    <description>COMBINEDLIABILITYINSURANCERiskLoc.</description>
    <label>COMBINEDLIABILITYINSURANCERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>