force-app/main/default/objects/Contact/fields/Complaint_Risk__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Risk__c</fullName>
    <label>Complaint Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>