force-app/main/default/objects/Contact/fields/COMPREHENSIVEGENERALLIABILITYRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>COMPREHENSIVEGENERALLIABILITYRiskLoc__c</fullName>
    <description>COMPREHENSIVEGENERALLIABILITYRiskLoc.</description>
    <label>COMPREHENSIVEGENERALLIABILITYRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>