force-app/main/default/objects/Contact/fields/CONSPLANTNEQUIPMENTRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CONSPLANTNEQUIPMENTRiskLoc__c</fullName>
    <description>ConstPLANTNEQUIPMENTRiskLoc.</description>
    <label>ConstPLANTNEQUIPMENTRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>