force-app/main/default/objects/Contact/fields/CONSPLANTNEQUIPMENTSerialNo__c.field-meta.xml
<CustomField>
    <fullName>CONSPLANTNEQUIPMENTSerialNo__c</fullName>
    <description>ConstPLANTNEQUIPMENTSerialNo.</description>
    <label>ConstPLANTNEQUIPMENTSerialNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>