force-app/main/default/objects/Contact/fields/CONSPLANTNEQUIPMENTSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CONSPLANTNEQUIPMENTSHARIARiskLoc__c</fullName>
    <description>ConstPLANTNEQUIPMENTSHARIARiskLoc.</description>
    <label>ConstPLANTNEQUIPMENTSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>