force-app/main/default/objects/Contact/fields/CONSPLANTNEQUIPMENTSHARIASerialNo__c.field-meta.xml
<CustomField>
    <fullName>CONSPLANTNEQUIPMENTSHARIASerialNo__c</fullName>
    <description>ConstPLANTNEQUIPMENTSHARIASerialNo.</description>
    <label>ConstPLANTNEQUIPMENTSHARIASerialNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>