force-app/main/default/objects/Contact/fields/CONSUMERLOANRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CONSUMERLOANRiskLoc__c</fullName>
    <description>CONSUMERLOANRiskLoc.</description>
    <label>CONSUMERLOANRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>