force-app/main/default/objects/Contact/fields/CONSUMERLOANSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CONSUMERLOANSHARIARiskLoc__c</fullName>
    <description>CONSUMERLOANSHARIARiskLoc.</description>
    <label>CONSUMERLOANSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>