force-app/main/default/objects/Contact/fields/ContBANKGUARANTSPPLYBONDWrrntyBankNo__c.field-meta.xml
<CustomField>
    <fullName>ContBANKGUARANTSPPLYBONDWrrntyBankNo__c</fullName>
    <description>ContBANKGUARANTEESUPPLYBONDWrrntyBankNo.</description>
    <label>ContBANKGUARANTEESUPPLYBONDWrrntyBankNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>