force-app/main/default/objects/Contact/fields/Count_Polnum__c.field-meta.xml
<CustomField>
    <fullName>Count_Polnum__c</fullName>
    <formula>LEN(Policy_No_Numeric__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Polnum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>