force-app/main/default/objects/Contact/fields/Coy__c.field-meta.xml
<CustomField>
    <fullName>Coy__c</fullName>
    <label>Coy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>