force-app/main/default/objects/Contact/fields/CROPINSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CROPINSRiskLoc__c</fullName>
    <description>CROPINSURANCERiskLoc.</description>
    <label>CROPINSURANCERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>