force-app/main/default/objects/Contact/fields/CROPINSSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CROPINSSHARIARiskLoc__c</fullName>
    <description>CROPINSURANCESHARIARiskLoc.</description>
    <label>CROPINSURANCESHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>