force-app/main/default/objects/Contact/fields/CshINCHASIERBOXRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CshINCHASIERBOXRiskLoc__c</fullName>
    <description>CASHINCHASIERBOXRiskLoc.</description>
    <label>CASHINCHASIERBOXRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>