force-app/main/default/objects/Contact/fields/CshINCHASIERBOXSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CshINCHASIERBOXSHARIARiskLoc__c</fullName>
    <description>CASHINCHASIERBOXSHARIARiskLoc.</description>
    <label>CASHINCHASIERBOXSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>