force-app/main/default/objects/Contact/fields/CshInSafeCshInCshrsBoxRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CshInSafeCshInCshrsBoxRiskLoc__c</fullName>
    <description>CashInSafeCashInCashiersBoxRiskLoc.</description>
    <label>CashInSafeCashInCashiersBoxRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>