force-app/main/default/objects/Contact/fields/CshInSafeCshInCshrsBoxSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CshInSafeCshInCshrsBoxSHARIARiskLoc__c</fullName>
    <description>CashInSafeCashInCashiersBoxSHARIARiskLoc.</description>
    <label>CashInSafeCashInCashiersBoxSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>