force-app/main/default/objects/Contact/fields/CshINSAFERiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CshINSAFERiskLoc__c</fullName>
    <description>CASHINSAFERiskLoc.</description>
    <label>CASHINSAFERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>