force-app/main/default/objects/Contact/fields/CshINSAFESHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>CshINSAFESHARIARiskLoc__c</fullName>
    <description>CASHINSAFESHARIARiskLoc.</description>
    <label>CASHINSAFESHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>