force-app/main/default/objects/Contact/fields/CshINTRANSITCarryingSchedule__c.field-meta.xml
<CustomField>
    <fullName>CshINTRANSITCarryingSchedule__c</fullName>
    <description>CASHINTRANSITCarryingSchedule.</description>
    <label>CASHINTRANSITCarryingSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>