force-app/main/default/objects/Contact/fields/CshINTRANSITSHARIACarryingSchedule__c.field-meta.xml
<CustomField>
    <fullName>CshINTRANSITSHARIACarryingSchedule__c</fullName>
    <description>CASHINTRANSITSHARIACarryingSchedule.</description>
    <label>CASHINTRANSITSHARIACarryingSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>