force-app/main/default/objects/Contact/fields/Currency_Name_TelUW__c.field-meta.xml
<CustomField>
    <fullName>Currency_Name_TelUW__c</fullName>
    <formula>CASE(Currency_TelUW__c,
&quot;RP&quot;, &quot;Rp&quot;,
&quot;USD&quot;, &quot;$&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Name TelUW</label>
    <type>Text</type>
</CustomField>