force-app/main/default/objects/Contact/fields/Currency_TelUW__c.field-meta.xml
<CustomField>
    <fullName>Currency_TelUW__c</fullName>
    <label>Currency TelUW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>