force-app/main/default/objects/Contact/fields/Cust_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Cust_Segmentation__c</fullName>
    <inlineHelpText>Customer Segmentation for AMFS Only</inlineHelpText>
    <label>Cust Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Regular, Nasabah Aceh</fullName>
            </value>
            <value>
                <fullName>Priority, Nasabah Aceh</fullName>
            </value>
            <value>
                <fullName>Private, Nasabah Aceh</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Priorit</fullName>
                <isActive>false</isActive>
                <label>Priorit</label>
            </value>
            <value>
                <fullName>Privaate</fullName>
                <isActive>false</isActive>
                <label>Privaate</label>
            </value>
            <value>
                <fullName>Privat</fullName>
                <isActive>false</isActive>
                <label>Privat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>