force-app/main/default/objects/Contact/fields/Customer_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Queue_Name__c</fullName>
    <label>Customer Queue Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFI - Email Other Queue</fullName>
            </value>
            <value>
                <fullName>AFI - Email Regular Queue</fullName>
            </value>
            <value>
                <fullName>AFI - Email Blacklist Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>