force-app/main/default/objects/Contact/fields/CUSTOMSBONDPrincipalCode__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMSBONDPrincipalCode__c</fullName>
    <description>CUSTOMSBONDPrincipalCode.</description>
    <label>CUSTOMSBONDPrincipalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>