force-app/main/default/objects/Contact/fields/Delete_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Delete_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Candidate</label>
    <type>Checkbox</type>
</CustomField>