force-app/main/default/objects/Contact/fields/Dependent_No__c.field-meta.xml
<CustomField>
    <fullName>Dependent_No__c</fullName>
    <label>Dependent No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>