force-app/main/default/objects/Contact/fields/Detail_of_Damage__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_Damage__c</fullName>
    <label>Detail of Damage</label>
    <type>TextArea</type>
</CustomField>