force-app/main/default/objects/Contact/fields/DtBase__c.field-meta.xml
<CustomField>
    <fullName>DtBase__c</fullName>
    <label>DtBase</label>
    <length>25</length>
    <type>Text</type>
</CustomField>