force-app/main/default/objects/Contact/fields/DumpTruckChasisNo__c.field-meta.xml
<CustomField>
    <fullName>DumpTruckChasisNo__c</fullName>
    <description>DumpTruckChasisNo.</description>
    <label>DumpTruckChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>