force-app/main/default/objects/Contact/fields/DumpTruckMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>DumpTruckMCHNENo__c</fullName>
    <description>DumpTruckMachineNo.</description>
    <label>DumpTruckMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>