force-app/main/default/objects/Contact/fields/EARERECTIONALLRISKRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>EARERECTIONALLRISKRiskLoc__c</fullName>
    <description>EARERECTIONALLRISKRiskLoc.</description>
    <label>EARERECTIONALLRISKRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>