force-app/main/default/objects/Contact/fields/EARERECTIONALLRISKSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>EARERECTIONALLRISKSHARIARiskLoc__c</fullName>
    <description>EARERECTIONALLRISKSHARIARiskLoc.</description>
    <label>EARERECTIONALLRISKSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>