force-app/main/default/objects/Contact/fields/Email_Sms_Log_Ask__c.field-meta.xml
<CustomField>
    <fullName>Email_Sms_Log_Ask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Sms Log Ask</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>