force-app/main/default/objects/Contact/fields/Email_Sms_Log_Buy__c.field-meta.xml
<CustomField>
    <fullName>Email_Sms_Log_Buy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Sms Log Buy</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>Contacts (Email Sms Log Buy)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>