force-app/main/default/objects/Contact/fields/Email_Sms_Log_Claim__c.field-meta.xml
<CustomField>
    <fullName>Email_Sms_Log_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Sms Log Claim</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>Contacts (Email Sms Log Claim)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>